--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,21 @@
+buildscript {
+    ext.kotlin_version = '1.9.0' // Updated Kotlin version
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        // Updated AGP to 8.x for Android 15 support
+        classpath 'com.android.tools.build:gradle:8.2.0' 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url "${project(':background_fetch').projectDir}/libs" }
     }
 }
 
@@ -13,8 +26,6 @@ subprojects {
 subprojects {
     project.evaluationDependsOn(':app')
 }
-
-ext.kotlin_version = "1.8.0"
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
