--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.9.0' // Updated Kotlin version
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        // Updated AGP to 8.x for Android 15 support
-        classpath 'com.android.tools.build:gradle:8.2.0' 
+        // This version (8.2.0) is REQUIRED for Android 15
+        classpath 'com.android.tools.build:gradle:8.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
